--- a/business-intelligence.html
+++ b/business-intelligence.html
@@ -134,7 +134,7 @@ Business Intelligence Analyst - SQL&amp; Tableau Job in London ?32-38K</a></h5>
 <p><span class="badge badge-light">Tempe, Arizona</span></p>
 <p>Posted on:: 2019-10-27</p>
 <hr/>
-<h5><a href='http://jobs.jobvite.com/careers/service/redirect?c=qfnaVfwr&k=Job&j=onvjbfw6&__jvst=Employee&__jvsd=sGgJ2hwt&__jvsc=Twitter&bid=nURylMwV'>Ingram Micro Careers - Business Intelligence Analyst</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='http://jobs.jobvite.com/careers/service/redirect?c=qfnaVfwr&k=Job&j=onvjbfw6&__jvst=Employee&__jvsd=sGgJ2hwt&__jvsc=Twitter&bid=nURylMwV'>Ingram Micro Careers - Business Intelligence Analyst</a></h5> 
 <p><span class="badge badge-light">United States Irvine, California</span></p>
 <p>Posted on:: 2019-10-27</p>
 <hr/>
@@ -146,7 +146,7 @@ Business Intelligence Analyst - SQL&amp; Tableau Job in London ?32-38K</a></h5>
 <p><span class="badge badge-light">Orlando, FL, USA</span></p>
 <p>Posted on: 2019-10-27</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://jobs.jobvite.com/ashcompanies/job/o512afw2'>American Specialty Health, Inc. Careers - Business Intelligence Analyst II</a></h5> 
+<h5><a href='https://jobs.jobvite.com/ashcompanies/job/o512afw2'>American Specialty Health, Inc. Careers - Business Intelligence Analyst II</a></h5> 
 <p><span class="badge badge-light">Carmel, Indiana</span></p>
 <p>Posted on: 2019-10-27</p>
 <hr/>
@@ -183,7 +183,7 @@ data modeling, ETL and report development and mentors others on the best?...</p>
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-10-26</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://boards.greenhouse.io/indigo/jobs/1932595'>Job Application for Carbon Business Intelligence Analyst at Indigo</a></h5> 
+<h5><a href='https://boards.greenhouse.io/indigo/jobs/1932595'>Job Application for Carbon Business Intelligence Analyst at Indigo</a></h5> 
 <p><span class="badge badge-light"></span></p>
 <p>2 days ago ... The Carbon Business Intelligence Analyst will bring structure and clear 
 governance to the collection and presentation of carbon data. We're looking for 
@@ -194,7 +194,7 @@ an?...</p>
 <p>Oct 16, 2019 ... As our Business Intelligence Analyst at Pollen, you will be part of the broader 
 agile and geographically-dispersed BI team, focused on facilitating a company?...</p>
 <hr/>
-<h5><a href='https://miacar.join.com/jobs/441760-business-intelligence-manager-f-m-d'>Job @ MIACAR (Z?rich): Business Intelligence Manag... | JOIN</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://miacar.join.com/jobs/441760-business-intelligence-manager-f-m-d'>Job @ MIACAR (Z?rich): Business Intelligence Manag... | JOIN</a></h5> 
 <p><span class="badge badge-light">Z?rich, Switzerland</span></p>
 <p>Posted on: 2019-10-25</p>
 <hr/>
@@ -206,7 +206,7 @@ agile and geographically-dispersed BI team, focused on facilitating a company?..
 <p><span class="badge badge-light">Detroit</span></p>
 <p>Posted on: 2019-10-25</p>
 <hr/>
-<h5><a href='http://jobs.jobvite.com/hkstrategies/job/oyvpbfwn'>Hill+Knowlton Strategies Careers - Coordenador de Business Intelligence - Comunica??o</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='http://jobs.jobvite.com/hkstrategies/job/oyvpbfwn'>Hill+Knowlton Strategies Careers - Coordenador de Business Intelligence - Comunica??o</a></h5> 
 <p><span class="badge badge-light">Sao Paulo, Brazil</span></p>
 <p>Posted on: 2019-10-24</p>
 <hr/>
@@ -290,7 +290,7 @@ using?...</p>
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-10-23</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://paltron1.join.com/jobs/454913-business-intelligence-specialist-m-w-d'>Job @ PALTRON (Lingen): Business Intelligence Spec... | JOIN</a></h5> 
+<h5><a href='https://paltron1.join.com/jobs/454913-business-intelligence-specialist-m-w-d'>Job @ PALTRON (Lingen): Business Intelligence Spec... | JOIN</a></h5> 
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-10-23</p>
 <hr/>
@@ -396,7 +396,7 @@ Pittsburgh offices. Experience in R and Python is preferred.</p>
 <p><span class="badge badge-light">Greeley, Colorado</span></p>
 <p>Posted on: 2019-10-21</p>
 <hr/>
-<h5><a href='https://raisin.join.com/jobs/442579-junior-business-intelligence-engineer-m-f-d'>Job @ Raisin (Berlin): Junior Business Intelligenc... | JOIN</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://raisin.join.com/jobs/442579-junior-business-intelligence-engineer-m-f-d'>Job @ Raisin (Berlin): Junior Business Intelligenc... | JOIN</a></h5> 
 <p><span class="badge badge-light">Berlin Berlin, Germany  Berlin</span></p>
 <p>Posted on: 2019-10-21</p>
 <hr/>
@@ -408,7 +408,7 @@ Pittsburgh offices. Experience in R and Python is preferred.</p>
 <p><span class="badge badge-light">Philadelphia, PA</span></p>
 <p>Posted on: 2019-10-20</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://mcmakler.join.com/jobs/443800-senior-business-intelligence-engineer-m-f-x'>Job @ McMakler (Berlin): Senior Business Intellige... | JOIN</a></h5> 
+<h5><a href='https://mcmakler.join.com/jobs/443800-senior-business-intelligence-engineer-m-f-x'>Job @ McMakler (Berlin): Senior Business Intellige... | JOIN</a></h5> 
 <p><span class="badge badge-light">Berlin Berlin, Germany</span></p>
 <p>Posted on: 2019-10-20</p>
 <hr/>
@@ -416,11 +416,11 @@ Pittsburgh offices. Experience in R and Python is preferred.</p>
 <p><span class="badge badge-light">Cologne Cologne</span></p>
 <p>Posted on: 2019-10-20</p>
 <hr/>
-<h5><a href='http://jobs.jobvite.com/careers/service/redirect?c=q4w9Vfwo&k=Job&j=ok9Kafw7&__jvst=Employee+Referral&__jvsd=sfvEdgwm&__jvsc=Twitter&bid=nPgOeMwo'>GroupM EMEA Careers - Business Intelligence Developer, Neo Media World</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='http://jobs.jobvite.com/careers/service/redirect?c=q4w9Vfwo&k=Job&j=ok9Kafw7&__jvst=Employee+Referral&__jvsd=sfvEdgwm&__jvsc=Twitter&bid=nPgOeMwo'>GroupM EMEA Careers - Business Intelligence Developer, Neo Media World</a></h5> 
 <p><span class="badge badge-light">London</span></p>
 <p>Posted on:: 2019-10-20</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://jobs.jobvite.com/chegg/job/oFn4afw0'>Chegg Careers - Senior Business Intelligence Developer</a></h5> 
+<h5><a href='https://jobs.jobvite.com/chegg/job/oFn4afw0'>Chegg Careers - Senior Business Intelligence Developer</a></h5> 
 <p><span class="badge badge-light">Santa Clara, California  Santa Clara, CAUnited States</span></p>
 <p>Posted on: 2019-10-20</p>
 <hr/>
@@ -454,7 +454,7 @@ full time Business Intelligence (BI) analyst. The analyst will report within the
 <p><span class="badge badge-light">S?o Paulo</span></p>
 <p>Posted on: 2019-10-19</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://jobs.lever.co/asapp-2/7392fef8-6b2a-47f3-addd-1c9e20fec343'>ASAPP - Business Intelligence Analyst</a></h5> 
+<h5><a href='https://jobs.lever.co/asapp-2/7392fef8-6b2a-47f3-addd-1c9e20fec343'>ASAPP - Business Intelligence Analyst</a></h5> 
 <p><span class="badge badge-light">New York  NYC</span></p>
 <p>Posted on: 2019-10-19</p>
 <hr/>
